--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proshop2",
+  "name": "meraki",
   "version": "2.0.0",
   "type": "module",
   "description": "Ecommerce application built with the MERN stack",
